--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TechVisionForge - Future-Ready Tech Solutions</title>
-    <meta name="description" content="TechVisionForge - Building innovative, future-ready technology solutions for businesses of all sizes." />
-    <meta name="author" content="TechVisionForge" />
+    <title>fromscratchs - Future-Ready Tech Solutions</title>
+    <meta name="description" content="fromscratchs - Building innovative, future-ready technology solutions for businesses of all sizes." />
+    <meta name="author" content="fromscratchs" />
+    <link rel="icon" href="/favicon.ico">
 
-    <meta property="og:title" content="TechVisionForge - Future-Ready Tech Solutions" />
+
+    <meta property="og:title" content="fromscratchs - Future-Ready Tech Solutions" />
     <meta property="og:description" content="Building innovative, future-ready technology solutions for businesses of all sizes." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image"  />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@techvisionforge" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="#" />
+    <meta name="twitter:image" content="#" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
